[package]
name = "level3bug"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4.38"
crc32fast = "1.4.2"
itertools = "0.13.0"
serde = { version = "1.0.196", features = ["derive"] }
serde_json = { version = "1.0.113", features = ["raw_value"] }
serde_with = "3.6.0"
time = { version = "0.3.36", features = ["serde-well-known"] }
